# rust-pico-badrandom

./: .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh
.cargo/: config
.github/workflows/: uf2.yml
src/: lfsr.rs  lib.rs  main.rs
src/fiddler/: mod.rs
src/lfsr/: mod.rs
src/setup/: mod.rs
