[package]
name = "rust-pico-badrandom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m" }

[dependencies]
cortex-m = "0.7.2"
rp2040-hal = "0.2.0"
cortex-m-rt = { version = "0.7", optional = true }
embedded-time = "0.12.0"

rp2040-pac = { git = "https://github.com/rp-rs/rp2040-pac", branch="main" }
rp2040-boot2 = "*"

panic-halt= "0.2.0"
embedded-hal ="0.2.5"
cortex-m-rtic = "0.6.0-alpha.5"

[dev-dependencies]
nb = "1.0"

[features]
default = ["rt"]
rt = ["cortex-m-rt","rp2040-hal/rt"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
