[package]
name = "rust-pico-badrandom"
version = "0.2.0"
edition = "2021"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.3" }  #, features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.0", optional = true }
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { version = "0.3.0"}
embedded-hal ="0.2.5"
embedded-time = "0.12.0"
panic-halt = "0.2.0"
rp-pico = "0.2.0"
defmt = "0.2.0"
defmt-rtt = "0.2.0"

[features]
default = [
    "boot2",
    "rt"
]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
